plugins {
    id 'java'
    id 'idea'
    id 'org.springframework.boot' version '3.3.2'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'org.graalvm.buildtools.native' version '0.9.24'
}

group = 'dev.anshumax.htmltopdf'
version = '1.0'

java {
    sourceCompatibility = '21'
}

graalvmNative {
    binaries {
        main {
            buildArgs.add('--enable-preview')
        }
    }
}

repositories {
    mavenCentral()
    mavenLocal()
    flatDir { dirs 'libs' }
    maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
    maven { url "https://nexus.geomatys.com/repository/geotoolkit/" }
    maven { url 'https://jitpack.io' }
}

dependencies {
    //developmentOnly("org.springframework.boot:spring-boot-devtools")
    //Spring web server dependencies
//    implementation group: 'org.springframework.boot', name: 'spring-boot-starter'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter'


//    //Security
//    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
//    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
//    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
//    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'

    //Cache
//    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
//    implementation group: 'javax.cache', name: 'cache-api', version: '1.1.1'
//    implementation group: 'org.ehcache', name: 'ehcache', version: '3.10.6'

//    //Data
//    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
//    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
//    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc'

    //Uncomment to create JPA Meta model
//    annotationProcessor('org.hibernate:hibernate-jpamodelgen:5.4.27.Final')

    //Common dependencies
    implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.12.765'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.14.0'
    implementation group: 'commons-io', name: 'commons-io', version: '2.16.1'

    //Other dependencies
    implementation 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'
    implementation 'org.modelmapper:modelmapper:3.2.0'


    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.23.0'
    implementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '3.0.2'
    implementation group: 'org.apache.commons', name: 'commons-pool2', version: '2.12.0'
}